table assignment done

--- a/time_table.html
+++ b/time_table.html
@@ -4,31 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time Table</title>
-    <style>
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-      th,
-      td {
-        padding: 10px;
-        text-align: center;
-      }
-      th[colspan="8"] {
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="style_time.css" />
   </head>
   <body>
     <table>
       <thead>
         <tr>
-          <th colspan="8">TIME TABLE</th>
+          <th colspan="9">TIME TABLE</th>
         </tr>
         <tr>
           <th>Day/Period</th>
