--- a/seminar.html
+++ b/seminar.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seminar Schedule</title>
-    <style>
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-      th,
-      td {
-        padding: 10px;
-        text-align: center;
-      }
-      caption {
-        caption-side: top;
-        font-weight: bold;
-        font-size: 1.2em;
-        margin-bottom: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="style_seminar.css" />
   </head>
   <body>
     <table>
